[package]
name = "servercore"
version = "0.1.0"
edition = "2021"
authors = ["OnlyF0uR"]
description = "All essential server logic for your Minecraft server."

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin" }
pumpkin-util = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-util" }
pumpkin-api-macros = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-api-macros" }

async-trait = "0.1.85"
tokio = { version = "1.43", features = ["full"] }

env_logger = "0.11.6"
log = "0.4.25"
rand = "0.8.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
