[package]
name = "servercore"
version = "0.1.0"
edition = "2021"
authors = ["OnlyF0uR"]
description = "Core plugin providing essential functionality to Pumpkin servers."

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin" }
pumpkin-util = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-util" }
pumpkin-api-macros = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", branch = "master", package = "pumpkin-api-macros" }

async-trait = "0.1.85"
tokio = { version = "1.43", features = ["full"] }
dashmap = "6.1.0"
lazy_static = "1.5.0"

env_logger = "0.11.6"
log = "0.4.25"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
jsonc-parser = { version = "0.26.2", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
